sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: not found: value stop
	while( !stop || ecart > 1){
                ^AlgCombSort:7: error: not found: value stop
		stop = true;
                ^AlgCombSort:12: error: not found: value i
		i = 0;
                ^AlgCombSort:14: error: not found: value i
		while( i+ecart < getNombreValeurs()){
                       ^AlgCombSort:15: error: not found: value i
			if (plusPetit(i+1, i)){
                                      ^AlgCombSort:16: error: not found: value i
				echange(i+1, i);
                                        ^AlgCombSort:17: error: not found: value stop
				stop = false;
                                ^AlgCombSort:19: error: not found: value i
			i++;
                        ^